@@ -23,33 +23,33 @@
 #ifndef FINAL_H
 #define FINAL_H
 
-#include "fapplication.h"
-#include "fbuttongroup.h"
-#include "fbutton.h"
-#include "fcheckbox.h"
-#include "fcheckmenuitem.h"
-#include "fdialog.h"
-#include "fdialoglistmenu.h"
-#include "ffiledialog.h"
-#include "flabel.h"
-#include "flineedit.h"
-#include "flistbox.h"
-#include "fmenubar.h"
-#include "fmenu.h"
-#include "fmenuitem.h"
-#include "fmessagebox.h"
-#include "fpoint.h"
-#include "fprogressbar.h"
-#include "fradiobutton.h"
-#include "fradiomenuitem.h"
-#include "frect.h"
-#include "fscrollbar.h"
-#include "fstatusbar.h"
-#include "fstring.h"
-#include "fswitch.h"
-#include "fterm.h"
-#include "ftextview.h"
-#include "ftooltip.h"
-#include "fwidget.h"
+#include <final/fapplication.h>
+#include <final/fbuttongroup.h>
+#include <final/fbutton.h>
+#include <final/fcheckbox.h>
+#include <final/fcheckmenuitem.h>
+#include <final/fdialog.h>
+#include <final/fdialoglistmenu.h>
+#include <final/ffiledialog.h>
+#include <final/flabel.h>
+#include <final/flineedit.h>
+#include <final/flistbox.h>
+#include <final/fmenubar.h>
+#include <final/fmenu.h>
+#include <final/fmenuitem.h>
+#include <final/fmessagebox.h>
+#include <final/fpoint.h>
+#include <final/fprogressbar.h>
+#include <final/fradiobutton.h>
+#include <final/fradiomenuitem.h>
+#include <final/frect.h>
+#include <final/fscrollbar.h>
+#include <final/fstatusbar.h>
+#include <final/fstring.h>
+#include <final/fswitch.h>
+#include <final/fterm.h>
+#include <final/ftextview.h>
+#include <final/ftooltip.h>
+#include <final/fwidget.h>
 
 #endif  // FINAL_H
